--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,6 +25,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Birds'
 - !lcc 'QL'
+- GITenberg
 tableOfContents: On Boston Common -- Bird-songs -- Character in feathers -- In the
   White mountains -- Phillida and Coridon -- Scraping acquaintance -- Minor songsters
   -- Winter birds about Boston -- A bird-lover's April -- An Owl's Head holiday --
